# LiveCut-Redux

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
Source/: CustomComponentImages.h  CustomComponents.cpp  CustomComponents.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/lib/: BBCutter.cpp
